--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -1,23 +1,20 @@
 server:
-    port: 8082
+  port: ${PORT:8082}
 
 spring:
-    application:
-        name: user-service
+  application:
+    name: user-service
+  data:
+    mongodb:
+      host: ${MONGODB_HOST:localhost}
+      port: ${MONGODB_PORT:27017}
+      database: ${MONGODB_DATABASE:workerp_users}
+      username: ${MONGODB_PASSWORD:root}
+      password: ${MONGODB_PASSWORD:rootpassword}
+      authentication-database: admin # MongoDB uses 'admin' db for authentication
 
-    data:
-        mongodb:
-            host: localhost
-            port: 27017
-            database: workerp_users
-            username: root # Match Docker MONGO_INITDB_ROOT_USERNAME
-            password: rootpassword # Match Docker MONGO_INITDB_ROOT_PASSWORD
-            authentication-database: admin # MongoDB uses 'admin' db for authentication
-
-    rabbitmq:
-        host: localhost
-        port: 5672
-        username: guest
-        password: guest
-        queue:
-            user-registration: user.registration.queue
+  rabbitmq:
+    host: ${RABBITMQ_HOST:localhost}
+    port: ${RABBITMQ_PORT:5672}
+    username: ${RABBITMQ_USERNAME:guest}
+    password: ${RABBITMQ_PASSWORD:guest}
