--- a/api-getway/src/main/resources/application.yaml
+++ b/api-getway/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
                 - id: auth-service
                   uri: http://localhost:8081
                   predicates:
-                      - Path=/auth/**
+                      - Path=/auth/**, /oauth2/**, /login/**
 
                 - id: user-service
                   uri: http://localhost:8082
