working :: company :: company-module-roles => for client

--- a/api-getway/src/main/resources/application.yaml
+++ b/api-getway/src/main/resources/application.yaml
@@ -16,6 +16,7 @@ spring:
             allowed-methods:
               - GET
               - POST
+              - PATCH
               - PUT
               - DELETE
               - OPTIONS
